# stcmd

./: .gitignore  flake.nix  pyproject.toml
stcmd/: __main__.py
stcmd/cli/: main.py
stcmd/df/: __init__.py  filter.py
stcmd/login/: main.py
stcmd/maps/: __init__.py  mapa.py
stcmd/options/: sidebar.py
stcmd/util/: __init__.py  buttons.py
tests/: test_stcmd.py
